# llm-random-weighted-selection

./: .gitignore  AHMED.md  CHART_DESC.md  CONFIG_KEYS.md  EXPONENTIAL_WEIGHTS.md  JSON_REFERENCE.md  MAIN_LOCATIONS.md  PRESENTATION.md  README.md  RUN_2_EXPERIMENTS.md  environment.yml  pyproject.toml
artifacts/comparisons/correctness_only_comparison/: comparison_summary.json
artifacts/comparisons/smoke_compare/: comparison_summary.json
artifacts/runs/20260330T171602Z/: config_snapshot.yaml  experiment.jsonl  summary.json
artifacts/runs/20260330T172628Z/: config_snapshot.yaml  experiment.jsonl  summary.json
artifacts/runs/20260406T011524Z/: config_snapshot.yaml  experiment.jsonl  run_metadata.json  summary.json
artifacts/runs/20260409T124836Z/: config_snapshot.yaml  experiment.jsonl  (+3 more)
configs/: correctness_only_exponential.yaml  correctness_only_metric_average.yaml  default.yaml  easy_qwen.yaml  personality_sampling.json  quickstart.yaml
personalities/: always_correct.md  always_nice_teacher.md  bold_searcher.md  cautious_analyst.md  efficiency_hunter.md  minimalist_executor.md  patient_verifier.md  skeptical_auditor.md  sometimes_correct.md
scripts/: run_correctness_comparison.ps1
src/llm_personality_experiment/: __init__.py  __main__.py  cli.py  config.py
src/llm_personality_experiment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_comparison.py  test_experiment_runner.py  test_replay.py  test_scoring.py  test_selection.py  test_solver.py  test_task_generation.py  test_verifier.py
(+65 files in other folders)
